force-app/main/default/objects/Contact/fields/Average_Return_Rate__c.field-meta.xml
<CustomField>
    <fullName>Average_Return_Rate__c</fullName>
    <label>Average Return Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>