force-app/main/default/objects/Contact/fields/Body_Type__c.field-meta.xml
<CustomField>
    <fullName>Body_Type__c</fullName>
    <label>Body Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pear</fullName>
            </value>
            <value>
                <fullName>Hourglass</fullName>
            </value>
            <value>
                <fullName>Rectangle</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Petite</fullName>
            </value>
            <value>
                <fullName>Tall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>