force-app/main/default/objects/Contact/fields/Bra_Size__c.field-meta.xml
<CustomField>
    <fullName>Bra_Size__c</fullName>
    <label>Bra Size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>