force-app/main/default/objects/Contact/fields/Budget_Tier__c.field-meta.xml
<CustomField>
    <fullName>Budget_Tier__c</fullName>
    <label>Budget Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Mid</fullName>
                <default>true</default>
                <label>Mid</label>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>