force-app/main/default/objects/Contact/fields/Bust_Inches__c.field-meta.xml
<CustomField>
    <fullName>Bust_Inches__c</fullName>
    <description>Shopper bust measurement used for personalized fit recommendations.</description>
    <inlineHelpText>Enter the shopper bust measurement in inches.</inlineHelpText>
    <label>Bust Inches</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>