force-app/main/default/objects/Contact/fields/Color_Preference__c.field-meta.xml
<CustomField>
    <fullName>Color_Preference__c</fullName>
    <label>Color Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>