force-app/main/default/objects/Contact/fields/Height_Inches__c.field-meta.xml
<CustomField>
    <fullName>Height_Inches__c</fullName>
    <label>Height Inches</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>