force-app/main/default/objects/Contact/fields/Hip_Inches__c.field-meta.xml
<CustomField>
    <fullName>Hip_Inches__c</fullName>
    <label>Hip Inches</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>