force-app/main/default/objects/Contact/fields/Loyalty_Member__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Loyalty Member</label>
    <referenceTo>Loyalty_Member__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>