force-app/main/default/objects/Contact/fields/Occasions__c.field-meta.xml
<CustomField>
    <fullName>Occasions__c</fullName>
    <label>Occasions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>