force-app/main/default/objects/Contact/fields/Preferred_Size__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Size__c</fullName>
    <label>Preferred Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XXS</fullName>
            </value>
            <value>
                <fullName>XS</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
            <value>
                <fullName>XXL</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>1X</fullName>
            </value>
            <value>
                <fullName>2X</fullName>
            </value>
            <value>
                <fullName>3X</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>