force-app/main/default/objects/Contact/fields/Style_Preference__c.field-meta.xml
<CustomField>
    <fullName>Style_Preference__c</fullName>
    <label>Style Preference</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boho</fullName>
            </value>
            <value>
                <fullName>Classic</fullName>
            </value>
            <value>
                <fullName>Minimalist</fullName>
            </value>
            <value>
                <fullName>Trendy</fullName>
            </value>
            <value>
                <fullName>Edgy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>