force-app/main/default/objects/Contact/fields/Waist_Inches__c.field-meta.xml
<CustomField>
    <fullName>Waist_Inches__c</fullName>
    <label>Waist Inches</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>